[gd_scene load_steps=5 format=3 uid="uid://bpab24orfy2gv"]

[ext_resource type="Script" path="res://scriptkitties/scrappy/ScrappyFuncCardOverhead.gd" id="1_0vxcp"]
[ext_resource type="PackedScene" uid="uid://61r7s2d0wbxx" path="res://main/RectangleComponent.tscn" id="2_fa10o"]
[ext_resource type="PackedScene" uid="uid://bufpx7o6o2ks" path="res://main/VerticalContainer.tscn" id="3_ycnwf"]
[ext_resource type="PackedScene" uid="uid://c1f1rpvdv7f4u" path="res://scriptkitties/AbilityFuncCall.tscn" id="4_mtd84"]

[node name="ScrappyFuncCardOverhead" type="Node2D"]
script = ExtResource("1_0vxcp")

[node name="RectangleComponent" parent="." instance=ExtResource("2_fa10o")]
width = 750
height = 1050
color = Color(1, 1, 1, 1)

[node name="UpFuncs" parent="." instance=ExtResource("3_ycnwf")]
position = Vector2(25, 25)

[node name="Func1" parent="UpFuncs" instance=ExtResource("4_mtd84")]
kitty_name = "Scrappy"
function_name = "func1"

[node name="Func2" parent="UpFuncs" instance=ExtResource("4_mtd84")]
visible = false
position = Vector2(0, 213)
kitty_name = "Scrappy"
function_name = ""
function_script = ""

[node name="Func3" parent="UpFuncs" instance=ExtResource("4_mtd84")]
visible = false
position = Vector2(0, 263)
kitty_name = "Scrappy"
function_name = ""
function_script = ""

[node name="DownFuncs" parent="." instance=ExtResource("3_ycnwf")]
position = Vector2(725, 1025)
rotation = 3.14159

[node name="Func1" parent="DownFuncs" instance=ExtResource("4_mtd84")]
kitty_name = "Scrappy"
function_name = "func1"

[node name="Func2" parent="DownFuncs" instance=ExtResource("4_mtd84")]
visible = false
position = Vector2(0, 213)
kitty_name = "Scrappy"
function_name = ""
function_script = ""

[node name="Func3" parent="DownFuncs" instance=ExtResource("4_mtd84")]
visible = false
position = Vector2(0, 263)
kitty_name = "Scrappy"
function_name = ""
function_script = ""

[node name="Divider" parent="." instance=ExtResource("2_fa10o")]
position = Vector2(325, 523)
width = 100
height = 5
